@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam nodesep 100
skinparam ranksep 80

package "User Management" {
    abstract class User {
        +String userId
        +String email
        +String password
        +login()
        +logout()
    }

    class Visitor {
        +searchProperties()
        +compareProperties()
    }

    class Buyer {
        +favorites: List<Property>
        +manageFavorites()
        +scheduleAppointment()
    }

    class Agent {
        +licenseNumber: String
        +manageListings()
        +viewClientHistory()
    }

    class Admin {
        +manageRoles()
        +generateReports()
    }

    class MobileUser {
        +deviceToken: String
        +receivePushNotification()
    }
}

package "Property Domain" {
    class Property {
        +String propertyId
        +Double price
        +String location
        +String status
        +getDetails()
    }

    class Gallery {
        +List<String> imageUrls
        +addMedia()
        +removeMedia()
    }
}

package "Interaction & System" {
    class Appointment {
        +DateTime dateTime
        +String status
        +confirm()
        +cancel()
    }

    class Message {
        +String messageId
        +String content
        +DateTime timestamp
        +send()
    }

    class Calendar {
        +List<Appointment> events
        +sync()
    }

    class Report {
        +String reportId
        +String dataSummary
        +exportPDF()
    }
}

' Inheritance Relationships
User <|-- Buyer
User <|-- Agent
Agent <|-- Admin
Buyer <|-- MobileUser
Agent <|-- MobileUser

' Associations
Agent "1" -- "*" Property : manages >
Property "1" *-- "1" Gallery : contains >
Buyer "*" -- "*" Property : favorites >

Buyer "1" -- "*" Appointment : requests >
Agent "1" -- "*" Appointment : conducts >
Agent "1" -- "1" Calendar : owns >
Appointment "*" -- "1" Calendar : belongs to >

Buyer "1" -- "*" Message : sends/receives >
Agent "1" -- "*" Message : sends/receives >

Admin "1" -- "*" Report : views >

@enduml